--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,27 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
   <link rel="stylesheet" href="{% static 'css/components.css' %}">
+  
+  <style>
+    /* Prevent horizontal overflow */
+    html, body {
+      overflow-x: hidden;
+      max-width: 100vw;
+    }
+    
+    /* Ensure all containers respect viewport width */
+    * {
+      box-sizing: border-box;
+    }
+    
+    /* Container should use Tailwind defaults - don't override */
+    
+    /* Prevent images from causing overflow */
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
   
